--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   "dependencies": {
     "cheerio": "^0.13.1",
     "coffee-script": "^1.7.1",
-    "request": "^2.34.0",
-    "debug": "^0.8.0"
+    "debug": "^0.8.0",
+    "q": "^1.1.2",
+    "request": "^2.34.0"
   },
   "devDependencies": {
     "matchdep": "0.3.0",
