--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "cheerio": "^0.13.1",
     "coffee-script": "^1.7.1",
     "debug": "^0.8.0",
